style and body edits
added font size, font family and background colour.
set body width and length to 100%;.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Sound Effects App</title>
+    <style>
+      h1 {
+        font-size: 80px;
+        font-family: sans-serif;
+        background-color: lightgray;
+      }
+    </style>
   </head>
-  <body>
-    
+  <body width="100%" length="100%">
+    <h1>Sound Effects App</h1>
   </body>
 </html>
